# whisper-webui-mlx

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.spark  Makefile  README.md  docker-run-spark.sh  docker-run.sh  pyproject.toml  requirements-cohere.txt  requirements-docker.txt  requirements-parakeet-mlx.txt  requirements-parakeet-nemo-cuda.txt  requirements-whisper-cpu.txt  requirements-whisper-mlx.txt  requirements.txt  run.sh
.agent/: judge_feedback.md  last_judge.txt  last_planner.txt  plan.md  progress.md  queue.md  state.md  worker_report.md
docs/: business_description.md  dev.md  spark_parakeet_cuda.md  spec.md  tree.md  ui_noise_audit.md
mlx_ui/: app.py  app_context.py  db.py  engine_registry.py  engine_resolution.py  hot_folder.py  job_ui.py  languages.py  live_backend_runtime.py  live_transcription.py  logging_config.py  result_retention.py  runtime_metadata.py  runtime_metadata_about.py  runtime_metadata_engine_options.py  runtime_metadata_integrations.py  runtime_metadata_live.py  runtime_metadata_local_models.py  runtime_metadata_settings_snapshot.py  settings.py  settings_schema.py  settings_store.py  spark_container.py  storage.py  telegram.py  transcriber.py  transcript_result.py  update_check.py  uploads.py  worker.py
scripts/: archive_repo.py  build_embedded_runtime.py  build_macos_app.sh  build_macos_dmg.sh  install.sh  notarize_macos_artifact.sh  setup_and_run.sh  sign_macos_app.sh  stage_release_payload.py  validate_macos_app_bundle.py  verify_macos_artifact.sh
tests/: test_app.py  test_archive_repo_script.py  test_lifespan.py  (+32 more)
(+85 files in other folders)
