[tool.poetry]
name = "mlx-ui"
version = "0.1.32"
description = ""
authors = ["Ivan Khokhlov <ivan.s.khokhlov@rt.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.3,<4.0"
fastapi = "^0.115.6"
jinja2 = "^3.1.4"
uvicorn = "^0.32.1"
python-multipart = "^0.0.21"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest = "^8.3.4"
ruff = "^0.14.13"

[tool.poetry.group.whisper_mlx.dependencies]
huggingface-hub = ">=0.30,<1.0"
whisper-turbo-mlx = { git = "https://github.com/JosefAlbers/whisper-turbo-mlx.git" }

[tool.poetry.group.whisper_cpu.dependencies]
openai-whisper = "*"

[tool.poetry.group.cohere.dependencies]
cohere = ">=5.21.1,<6.0"

# Parakeet is intentionally not part of the macOS bootstrap story here.
# The local Parakeet backend currently targets Linux + CUDA environments.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
